--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -135,3 +135,20 @@ header
 
   .containerNews
     width: 80%
+
+  main
+    .containerNews 
+      .card
+        a
+          width: 100%
+
+        img
+          width: 100%
+          height: 100%
+          object-fit: contain
+
+        h1
+          font-size: 20px
+
+        p
+          font-size: 16px
