--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,21 @@ header {
   .containerNews {
     width: 80%;
   }
+
+  main .containerNews .card a {
+    width: 100%;
+  }
+  main .containerNews .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  main .containerNews .card h1 {
+    font-size: 20px;
+  }
+  main .containerNews .card p {
+    font-size: 16px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
